--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
+    "axios": "^1.3.4",
+    "dotenv": "^16.0.3",
     "framer-motion": "^10.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
+    "react-scroll": "^1.8.9",
     "swiper": "^9.1.1"
   },
   "devDependencies": {
