--- a/package.json
+++ b/package.json
@@ -9,18 +9,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@sendgrid/mail": "^7.7.0",
+    "@sanity/block-content-to-react": "^3.0.0",
+    "@sanity/client": "^5.4.1",
+    "@sanity/image-url": "^1.0.2",
     "axios": "^1.3.4",
+    "axios-cache-adapter": "^2.7.3",
     "dotenv": "^16.0.3",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^10.9.1",
+    "highlight.js": "^9.18.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "react-scroll": "^1.8.9",
+    "react-syntax-highlighter": "^15.5.0",
     "swiper": "^9.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
