--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@sanity/block-content-to-react": "^3.0.0",
     "@sanity/client": "^5.4.1",
     "@sanity/image-url": "^1.0.2",
+    "@vercel/analytics": "^1.0.1",
     "axios": "^1.3.4",
     "dotenv": "^16.0.3",
     "emailjs-com": "^3.2.0",
